# nalewki

./: .gitignore  README.md  pour_nalewka.sh
python-project/: .gitignore  README.md  project_init.sh  pyproject.toml  requirements.txt  setup.cfg
python-project/src/{{project_name}}/: __init__.py  template.py
python-project/tests/: test_template.py
