[build-system]
requires = ["setuptools>=62.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{project_name}}"
version = "0.1.0"
description = "{{project_description}}"
authors = [
  { name="{{author_name}}", email="{{author_email}}" }
]
#license = "MIT"
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
select = ["E","F","B","C","I"]
exclude = ["venv",".venv","build","dist"]
line-length = 88

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
